fix: centralize close button on mobile menu

--- a/app/components/Header/styles.module.css
+++ b/app/components/Header/styles.module.css
@@ -77,6 +77,7 @@
 
 .hamburguerIcon.closeIcon {
   padding: 0.4rem 0.3rem;
+  transform: translateX(0.185rem);
 }
 
 .hamburguerIcon span:nth-child(1) {
